# nimy

./: .gitignore  .vscodeignore  Cargo.toml  README.md  bacon.toml  nimy.code-workspace  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  scratchpad.nim  vite.config.ts
.github/: copilot-instructions.md
.github/workflows/: test.yml
client/: tsconfig.json
client/src/: extension.ts
src/: lib.rs  main.rs  nimy.rs
src/nimy/: compiletimeeval.rs  cpunit.rs  generics.rs  includes.rs  installation.rs  namedprocs.rs  namedtypes.rs  procparser.rs  scope.rs  sourcefiles.rs  symbols.rs  toplevel.rs  trees.rs  type_constraints.rs  typeparser.rs  typer.rs  types.rs  values.rs  varparser.rs
tests/: basic_imports_test.nim  basic_imports_test.rs  basic_include_test.rs  basic_type_test.rs  cyclic_type_test.nim  cyclic_type_test.rs  magic_generic_test.nim  magic_generic_test.rs  magic_type_test.nim  magic_type_test.rs  mutually_calling_generic_test.nim  mutually_calling_generic_test.rs  proc_test.nim  proc_test.rs  var_from_proc_test.nim  var_from_proc_test.rs  var_type_test.nim  var_type_test.rs  when_type_test.nim  when_type_test.rs
tests/basic_include_test/: basic_include_test.nim  include_test_helper.nim  include_test_helper2.nim  include_test_helper3.nim
