[package]
name = "nimy"
version = "0.1.0"
edition = "2024"

[dependencies]
cached = "0.56.0"
lazy_static = "1.5.0"
normalize-path = "0.2.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tokio = { version = "1.47.1", features = ["full"] }
tree-sitter = "0.25.2"
tower-lsp = { version = "0.20.0", features = ["proposed"] }
which = "8.0.0"
log = "0.4.27"
env_logger = "0.11.8"

[dependencies.tree-sitter-nim]
git = "https://github.com/vanyle/tree-sitter-nim"
rev = "44d9ba36430fede749577d7830df395d91662d34"

[build-dependencies]
type-sitter-gen = "0.7.4"
